fixing text on mobile

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -61,7 +61,7 @@ body {
 }
 
 .navbar-text{
-	text-align:center
+	display: inline-block
 
 
 }
@@ -104,8 +104,8 @@ border:#000000;
     border-radius:0;
   	box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.7);
   	margin-top: 4px;
-  	
-  
+ 
+
 }
 
 .btn-primary{
